# mpcjax

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mpcjax/: .old_second_order_solvers.py  __init__.py  direct_solve.py  dynamics_definitions.py  function_cache.py  jax_solver.py  optimality.py  problem_struct.py  remote.py  remote_like_interface.py  sanitize.py  scp_solve.py  second_order_solvers.py  solver_definitions.py  solver_settings.py  utils.py
tests/: .pmap_tests.ipynb  dynamics.py  main.ipynb  test_diff_cost.py  test_slew.py  test_solve.py
