[project]
name = "mpcjax"
version = "0.2.0"
authors = [
  { name="Robert Dyro", email="robert.dyro@gmail.com" },
]
description = "A pure-JAX, CPU or GPU Model Predictive Control solver."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jax",
    "jaxfi",
]

[project.urls]
"Homepage" = "https://github.com/rdyro/mpcjax"
"Bug Tracker" = "https://github.com/rdyro/mpcjax"

[tool.ruff]
line-length = 100

